[gd_scene load_steps=6 format=3 uid="uid://c06bahnv683x5"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_byuud"]
[ext_resource type="Texture2D" uid="uid://do8rmupfsruv" path="res://assets/sprites/characters/player.png" id="2_7kgso"]
[ext_resource type="PackedScene" uid="uid://cmxum3eh7t50y" path="res://components/MoveActions.tscn" id="3_6hxx4"]
[ext_resource type="PackedScene" uid="uid://d1ksggo1i4gjg" path="res://components/PushActions.tscn" id="4_u0iki"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gnqx"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_byuud")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7kgso")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_8gnqx")

[node name="MoveCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="MoveActions" parent="." instance=ExtResource("3_6hxx4")]

[node name="RayCast2D" type="RayCast2D" parent="MoveActions"]
position = Vector2(8, 8)
target_position = Vector2(0, 16)

[node name="PushActions" parent="." instance=ExtResource("4_u0iki")]

[connection signal="timeout" from="MoveCooldownTimer" to="." method="_on_move_cooldown_timeout"]
